# peripherals-nfc

./: CMakeLists.txt  README.md  test.yaml
.github/workflows/: code-style.yml
example/: test_nfc_i2c.c  test_nfc_spi.c  test_nfc_uart.c
include/: nfc.h
src/: nfc_core.c  nfc_core.h
src/drivers/drv_i2c_SI512/: drv_i2c_SI512.c  drv_i2c_SI512.h
tests/: test_hw_si512_i2c_smoke.sh  test_nfc_api_contract.c  test_nfc_api_contract.sh
